@@ -1,3 +1,14 @@
+2007-06-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b81
+
+ * New: In manage user a nice tooltip with helpful information
+        appears when you hover a username from the list.
+
+   Thanks to Peter Schumacher for this idea.
+
+ * Fix: Minore CSS fix for disabled buttons.
+
+ * Change: Modify drawselect2 to accept attribs per option.
+ 
 2007-06-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b80
 
  * Change: New icon for navigation up.
